# Ougan

./: README.md
devdoc/editer/: feasibility_analysis.md
devdoc/middleware/: feasibility_analysis.md
devdoc/packager/: design.md  feasibility_analysis.md
packager/src/: CMakeLists.txt  packager.cpp
packager/src/const/: arg.hpp
packager/src/util/: CMakeLists.txt  message_box.cpp  message_box.hpp  util.hpp
packager/src/util/message_box/: CMakeLists.txt  message_box.cpp  message_box.hpp
packager/src/util/path/: CMakeLists.txt  path.cpp  path.hpp
packager/test/: CMakeLists.txt  packager-test.cpp
